# claude-rl-daemon

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
deploy/: com.claudedaemon.plist  install.sh
docs/: architecture.md
docs/superpowers/plans/: 2026-04-20-cdaemon.md
docs/superpowers/specs/: 2026-04-20-cdaemon-design.md
scripts/: phase1-after.sh  phase1-before.sh
src/: detector.rs  lib.rs  main.rs  notify.rs  scheduler.rs  session.rs  tmux.rs  watcher.rs
src/cdaemon/: format.rs  main.rs  state.rs
src/cdaemon/commands/: cancel.rs  completions.rs  doctor.rs  hook.rs  logs.rs  mod.rs  reschedule.rs  resume.rs  service.rs  sessions.rs  status.rs
src/cdaemon/commands/tui/: app.rs  dialogs.rs  events.rs  mod.rs  ui.rs
tests/: cdaemon_cancel_test.rs  cdaemon_state_test.rs  detector_test.rs  integration_test.rs  notify.rs  scheduler_test.rs  session_test.rs  smoke_test.rs  tmux_test.rs  watcher_test.rs
