[package]
name = "claude-rl-daemon"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_rl_daemon"
path = "src/lib.rs"

[[bin]]
name = "claude-rl-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
