[package]
name = "claude-rl-daemon"
version = "0.2.1"
edition = "2021"

[lib]
name = "claude_rl_daemon"
path = "src/lib.rs"

[[bin]]
name = "claude-rl-daemon"
path = "src/main.rs"

[[bin]]
name = "cdaemon"
path = "src/cdaemon/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tabled = "0.16"
colored = "2"
humantime = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin)'] }
